# atommovr-zwierlein

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTIONS.md  LICENSE  README.md  clean_code_guidelines.md  environment.yml  noxfile.py  paper_figures.ipynb  pyproject.toml  requirements-cuda.txt  spcm-testing.ipynb  tutorial.ipynb  vanilla_atommovr_tutorial.ipynb  zwierlein_lab_setup.ipynb  zwierlein_lab_tutorial.ipynb
PPSU2023/: bottleneckBipartiteMatching.c  libmatching_for_PPSU.exp  libmatching_for_PPSU.lib  portable_time.h  portdefs.h  setupc.py
atommovr/algorithms/: Algorithm_class.py  dual_species.py  single_species.py
atommovr/tests/: conftest.py
atommovr/utils/: AtomArray.py  ErrorModel.py  Move.py  __init__.py  benchmarking.py  core.py  error_utils.py  errormodels.py  failure_policy.py  move_utils.py  run_rearranging_benchmarks.py  timing.py
awg_controller/: README.md  __init__.py
awg_controller/docs/: dds_strategy_camera_triggered.md  dds_strategy_pattern.md  dds_strategy_ramp.md  dds_strategy_streaming.md
awg_controller/scripts/: atommover_controller.py  atommovr_controller.py
awg_controller/src/: __init__.py  awg_control.py  camera.py  dds_strategies.py  offline_camera.py  scapp.py  scapp_gen.py  session_recorder.py
awg_controller/tests/: test_awg_control.py  test_controller_pipeline.py  test_offline_and_calibration.py  test_scapp_gen.py  test_session_recorder.py
data/: fig2a_final_260505.nc  fig2b_final_260505.nc  fig3_final_260508.nc  fig5c_final_260507.nc  fig5de_260513.nc
figs/benchmark_angle_est/: benchmark_estimation.csv
spcm-examples/01_acquisition/: 01_acq_single.py  02_acq_single_2ch.py  03_acq_fifo.py  04_acq_multi.py  05_acq_gated.py  06_acq_single_digital.py  07_acq_fifo_gated.py  08_acq_fifo_multi_ts_poll.py  09_acq_synchronous_digital_in.py  10_acq_boxcar.py  11_acq_block_average.py  12_acq_block_statistics.py  13_acq_aba.py  14_acq_boxcar_fifo.py
spcm-examples/02_generation/: 08_gen_synchronous_digital_out.py  09_gen_sequence_restart.py  10_gen_single_large_memory.py
spcm-examples/03_dds/: 01_dds_single_static_carrier.py  02_dds_multiple_static_carriers.py  03_dds_ramp_single_carrier.py  04_dds_ramp_multiple_carriers.py  05_dds_timed_frequency_changes.py  07_dds_multiple_carriers_channels.py  09_dds_external_trigger.py  10_dds_xio.py  12_dds_complex_ramps.py  13_dds_command_list_streaming.py  14_dds_command_queue_streaming.py  15_dds_repeated_patterns.py  99_dds_graphical_user_interface.py
spcm-examples/04_pulse-generator/: 1_pg_continuous_signal.py  (+1 more)
(+60 files in other folders)
